--- a/css/styles.css
+++ b/css/styles.css
@@ -302,26 +302,26 @@ margin-bottom: 72px;
 display: flex;
 justify-content: center;
 gap: 24px;
-}
-
-.team-soc-item {
-width: 40px;
-height: 40px;
-border-radius: 50%;
-background-color: #4D5AE5;
-display: flex;
-align-items: center;
-justify-content: center;
 margin-bottom: 32px;
 }
 
-.team-soc-item:hover,
-.team-soc-item:focus {
-background: #404BBF;
-}
-  
 .team-soc-icon {
-fill: rgba(244, 244, 253, 1);
+    fill: #F4F4FD;;
+}
+
+.team-soc-link {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+background-color:#4D5AE5;
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+    background-color: #404BBF;
 }
 
 .team {
@@ -492,61 +492,53 @@ color: var(--text-color);
 /*================================= /PROMO-SECTION ==============================*/
 
 /*================================= CUSTOMERS ==============================*/
-
-.customers-item {
-height: 88px;
-width: 168px;
-border: 1px solid #8E8F99;
-border-radius: 4px;
-margin-bottom: 120px;
-}
-
-.customers-item:hover,
-.customers-item:focus {
-border: 1px solid #404BBF;
-}
-
-.customers-list {
-display: flex;
-align-items: center;
-justify-content: center;
-gap: 24px;
-}
-
-.customers-link {
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-.customers-icon {
-padding: 16px 32px;
-width: 100%;
-height: 100%;
-fill: #8E8F99;
-}
-
-.customers-icon:hover,
-.customers-icon:focus {
-fill: #404BBF;
-}
-
 .customers {
-padding-top: 130px;
+    padding-top: 130px;
+    padding-bottom: 120px;
 }
 
 .customers-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 40px;
-text-align: center;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color: var(--customers-color);
-margin-bottom: 72px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--customers-color);
+    margin-bottom: 72px;
+}
+    
+.customers-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 88px;
+    width: 168px;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
 }
 
+.customers-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+    
+.customers-link:hover .customers-icon,
+.customers-link:focus .customers-icon {
+    fill: #404BBF;;
+    border: 1px solid #404BBF;
+}
 
+        
+.customers-icon {
+    padding: 16px 32px;
+    width: 100%;
+    height: 100%;
+    fill: #8E8F99;
+}   
+         
+   
 /*================================= /CUSTOMERS ==============================*/
 
 
@@ -562,46 +554,32 @@ padding-bottom: 100px;
 }
 
 /* === SOCIAL-MEDIA === */
-
-.social-media {
-display: block;
-}
-
-.social-item {
-display: flex;
-align-items: center;
-justify-content: space-between;
-height: 50px;
-width: 50px;
-border-radius: 50%;
-gap: 16px;
-background: rgba(255, 255, 255, 0.1);
-}
-
-.social-item:hover,
-.social-item:focus {
-background: #31D0AA;
-}
-
-.social-item {
-width:40px;
-height:40px;
-}
-
 .social-list {
 display: flex;
-justify-content: space-between;
+justify-content: center;
 gap: 16px;
 }
+
 
 .social-link {
 display: flex;
-align-items: center;
 justify-content: center;
-fill: rgba(244, 244, 253, 1);
-width: 100%;
-height: 100%;
+align-items: center;
+width:40px;
+height:40px;
+border-radius: 50%;
+background-color: rgba(255, 255, 255, 0.1);
 }
+
+.social-link:hover,
+.social-link:focus {
+background-color:rgba(49, 208, 170, 1);
+}
+
+.social-icon {
+fill: rgba(244, 244, 253, 1);
+}
+
 
 /* === FOOTER-LOGO === */
 .footer-logo {
