--- a/css/styles.css
+++ b/css/styles.css
@@ -518,6 +518,12 @@ color: var(--text-color);
     border-radius: 4px;
 }
 
+.customers-link:hover,
+.customers-link:focus {
+    border: 1px solid #404BBF;
+
+}
+
 .customers-list {
     display: flex;
     justify-content: center;
@@ -526,8 +532,8 @@ color: var(--text-color);
     
 .customers-link:hover .customers-icon,
 .customers-link:focus .customers-icon {
-    fill: #404BBF;;
-    border: 1px solid #404BBF;
+    fill: #404BBF;
+
 }
 
         
